<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backgroud"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"/>

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/user"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/intro_btn_background"/>

            <EditText
                android:id="@+id/password_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/intro_btn_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@android:style/Widget.Button"
                android:background="@drawable/intro_btn_background"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/button_login"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>